--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap');
 
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.logo > img {
-    width: 100px;
-    height: 120px;
+body {
+    font-size: 16px;
+}
+
+.page1 {
+    background-image: url("../assets/images/bedroom.jpg");
+    height: 750px;
+    background-repeat: no-repeat;
+    background-size: 1600px 900px;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .ul-links {
@@ -35,24 +50,60 @@
     padding-right: 1.5rem;
     background-color: #38a2ff;
     border: none;
+    color: white;
 }
 
-.page1 {
-    background-image: url("../assets/images/hotel.jpg");
-    height: 600px;
-    background-repeat: no-repeat;
-    background-size: 1600px 900px;
-    display: flex;
-    justify-content: center;
+.page1-parts {
+    position: relative;
+    top: 15%;
+    left: 7%;
+    height: 20%;
+    width: 60%;
 }
 
-.booking {
+.page1-text {
+    font-size: 24px;
+}
+
+.booking-text {
     color: #2d7af7;
 }
 
-.search-bar > form {
+.page1-form {
+    height: 60%;
+    width: 80%;
+    display: flex;
+    align-items: center;
+}
+
+.place {
+    width: 350px;
+    height: 50px;
+}
+
+.date {
+    margin-left: .5rem;
     width: 200px;
-    /* CONTINUE */
+    height: 50px;
+}
+
+.search {
+    margin-left: .5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-radius: 5px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    background-color: #555555;
+    border: none;
+    color: white;
+    font-size: 16px;
+}
+
+.note {
+    position: relative;
+    top: 70%;
+    font-size: 16px;
 }
 
 /* PAGE 2 */
@@ -61,16 +112,8 @@
     height: 750px;
 }
 
-.page2-texts {
+.page2-text {
     height: 30%;
-    display: flex;
-    justify-content: center;
-}
-
-.page2-images {
-    height: 70%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .page2-images > img {
@@ -104,4 +147,32 @@
 .page3-images2 > img {
     width: 440px;
     height: 300px;
+}
+
+/* PAGE4 */
+.page4 {
+    height: 600px;
+    background-image: url("../assets/images/hotel1.png");
+    background-repeat: no-repeat;
+}
+
+.page4-text > p {
+    color: white;
+    font-size: 24px;
+}
+
+/* PAGE5 */
+.page5 {
+    height: 400px;
+    background-color: rgb(0, 42, 102);
+}
+
+.page5-text > p {
+    color: white;
+    font-size: 24px;
+}
+
+/* PAGE6 */
+.page6 {
+    height: 500px;
 }
