--- a/style/style.css
+++ b/style/style.css
@@ -117,9 +117,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Playfair Display', serif;
-    font-size: 28px;
+}
 
+.page2-text > h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 32px;
 }
 
 .page2-images {
@@ -143,6 +145,7 @@ body {
     justify-content: space-between;
     color: rgba(0, 0, 0, 0.8);
     font-weight: bold;
+    font-family: 'Playfair Display', serif;
 }
 
 /* PAGE 3 */
@@ -151,29 +154,63 @@ body {
     height: 750px;
 }
 
+.page3-text {
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page3-text > h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 32px;
+}
+
 .page3-images1 {
+    width: 90%;
+    height: 35%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.page3-images1 > img {
+    width: 400px;
+    height: 260px;
+}
+
+.page3-images1-text {
+    width: 90%;
+    height: 5%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
 
 .page3-images2 {
+    width: 90%;
+    height: 35%;
+    margin: 0 auto;
     margin-top: 2rem;
     display: flex;
     justify-content: space-between;
 }
 
-
-.page3-images1 > img {
-    width: 440px;
-    height: 300px;
+.page3-images2 > img {
+    width: 400px;
+    height: 260px;
 }
 
-.page3-images2 > img {
-    width: 440px;
-    height: 300px;
+.page3-images2-text {
+    width: 90%;
+    height: 5%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* PAGE4 */
+
 .page4 {
     height: 600px;
     background-image: url("../assets/images/hotel1.png");
