--- a/style/style.css
+++ b/style/style.css
@@ -6,9 +6,17 @@
     box-sizing: border-box;
 }
 
-body {
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     font-size: 16px;
 }
+
+/* PAGE1 */
 
 .page1 {
     background-image: url("../assets/images/bedroom.jpg");
@@ -247,12 +255,60 @@ body {
     background-repeat: no-repeat;
 }
 
-.page5-text > p {
+.page5-text {
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page5-text > h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 32px;
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.page5-form {
+    height: 20%;
+    position: relative;
+    left: 25%;
+}
+
+.page5-email {
+    width: 300px;
+    height: 50px;
+    border-radius: 25px;
+    border-color: #9c7854;
+    border-width: 5px;
+    border-style: solid;
+    padding: 1rem;
+}
+
+.page5-comment {
+    width: 300px;
+    height: 100px;
+    padding: 1rem;
+    border-radius: 25px;
+    border-color: #9c7854;
+    border-width: 5px;
+    border-style: solid;
+    margin-left: 1rem;
+}
+
+.page5-send {
+    width: 100px;
+    height: 50px;
+    margin-left: 1rem;
+    padding: 1rem;
+    border-radius: 5px;
+    background-color: #9c7854;
+    border: none;
     color: white;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 /* PAGE6 */
+
 .page6 {
     height: 400px;
     background-color: rgb(0, 42, 102);
