--- a/style/style.css
+++ b/style/style.css
@@ -282,6 +282,7 @@ html,body
     border-width: 5px;
     border-style: solid;
     padding: 1rem;
+    outline: none !important;
 }
 
 .page5-comment {
@@ -293,6 +294,7 @@ html,body
     border-width: 5px;
     border-style: solid;
     margin-left: 1rem;
+    outline: none !important;
 }
 
 .page5-send {
@@ -311,12 +313,51 @@ html,body
 
 .page6 {
     height: 400px;
-    background-color: rgb(0, 42, 102);
 }
 
-.page6-text > p {
+.page6-text {
+    height: 30%;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page6-text > h1 {
+    color: rgba(0, 0, 0, 0.8);
+    font-family: Arial, Helvetica, sans-serif;;
+}
+
+.page6-form {
+    height: 30%;
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.page6-firstname, .page6-lastname, .page6-email {
+    width: 350px;
+    height: 50px;
+    border-width: 5px;
+    border-radius: 10px;
+    border-color: rgb(13, 56, 117);
+    border-style: solid;
+    padding-left: 1rem;
+    margin-left: .5rem;
+}
+
+.page6-signup {
+    width: 100px;
+    height: 50px;
+    margin-left: 1rem;
+    padding: 1rem;
+    border-radius: 5px;
+    background-color: rgb(13, 56, 117);
+    border: none;
     color: white;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 /* Footer */
