--- a/style/style.css
+++ b/style/style.css
@@ -553,8 +553,7 @@ header .search-bar-container{
     border: 2px solid rgb(13, 56, 117);
 }
 
-
-.signup-signup {
+.signup-page-signup {
     width: 100px;
     height: 50px;
     margin-left: 1rem;
